--- a/rest_neighbourhood.Rmd
+++ b/rest_neighbourhood.Rmd
@@ -7,13 +7,13 @@ output: html_document
 
 
 ```{r}
-rest_neighbourhood = left_join(rest_inspection, zip_code_xml, by = "zip_codes")
+rest_neighbourhood = left_join(rest_inspection, zip_code_xml, by = "zipcode")
 
 ##calculating percentage neighbourhood is na
 mean(is.na(rest_neighbourhood$neighborhood))
 ##taking out distinct zipcodes with missing neighbourhood name
 rest_neighbourhood %>% 
-  select(zip_codes, neighborhood) %>% 
+  select(zipcode, neighborhood) %>% 
   filter(is.na(neighborhood)) %>% 
   distinct()
 ```
