classifying fast food restaurants using cuisine description

--- a/Download_reading_cleaning.Rmd
+++ b/Download_reading_cleaning.Rmd
@@ -12,6 +12,7 @@ library(rvest)
 library(httr)
 library(readxl)
 library(data.table)
+library(stringr)
 ```
 
 ```{r reading the New York Inspection data}
@@ -30,3 +31,46 @@ health <- read_excel("health.xlsx", sheet = "CHP_all_data") %>%
          Obesity, Diabetes, Stroke_Hosp)
 ```
 
+```{r defining_fastfood}
+rest_inspection %>%
+  mutate(dba = str_to_upper(dba),
+         dba = str_replace(dba, "//'", "")) %>%
+  distinct(dba, cuisine_description) %>%
+  arrange(dba)
+  
+  group_by(cuisine_description) %>%
+  summarise(n = n())
+
+rest_inspection %>%
+  distinct(dba, cuisine_description) %>%
+  arrange(dba)
+
+Bagels/Pretzels
+Bottled beverages, including water, sodas, juices, etc.
+Donuts
+Hamburgers
+Hotdogs
+Ice Cream, Gelato, Yogurt, Ices
+Pizza
+Chicken
+
+rest_inspection %>%
+  filter(cuisine_description == "Chicken") %>%
+  distinct(dba)
+
+```
+
+```{r counting_fastfood}
+rest_inspection %>%
+  filter(cuisine_description %in% c("Bagels/Pretzels",
+                                    "Bottled beverages, including water, sodas, juices, etc.",
+                                    "Chicken",
+                                    "Donuts",
+                                    "Hamburgers",
+                                    "Hotdogs",
+                                    "Ice Cream, Gelato, Yogurt, Ices",
+                                    "Pizza")
+         ) %>%
+  group_by(boro, ) %>%
+  summarise(n_fastfood = n())
+```
