--- a/zip_codes_scrapping.Rmd
+++ b/zip_codes_scrapping.Rmd
@@ -24,8 +24,9 @@ zip_code_xml = read_html(url) %>%
   separate(., zip_codes, into = c("zip_codes", "zip_codes2", "zip_codes3"), sep = ",") %>% 
   gather(., key = neighborhood1, value = zip_codes, zip_codes:zip_codes3) %>% 
   select(., - neighborhood1) %>% 
-<<<<<<< HEAD
-  mutate(zip_codes = as.integer(zip_codes))
+  mutate(zip_codes = as.integer(zip_codes)) %>% 
+  rename(zipcode = zip_codes) %>% 
+  mutate(zipcode = as.character(zipcode))
 
  zip_code_xml <- rbind(zip_code_xml, c("/","Carroll Gardens", "11231"))
  zip_code_xml <- rbind(zip_code_xml, c("/","Midwood", "11230"))
