--- a/zip_codes_scrapping.Rmd
+++ b/zip_codes_scrapping.Rmd
@@ -37,7 +37,8 @@ zip_code_xml = read_html(url) %>%
  zip_code_xml <- rbind(zip_code_xml, c("/","Chelsea and Clinton", "10019"))
  zip_code_xml <- rbind(zip_code_xml, c("/","Ozone Park", "11417"))
  zip_code_xml <- rbind(zip_code_xml, c("/","Midtown", "10022"))
- zip_code_xml <- rbind(zip_code_xml, c("/","Northwest Brooklyn", "11217"))  zip_code_xml <- rbind(zip_code_xml, c("/","Chelsea and Clinton", "10036"))
+ zip_code_xml <- rbind(zip_code_xml, c("/","Northwest Brooklyn", "11217"))  
+ zip_code_xml <- rbind(zip_code_xml, c("/","Chelsea and Clinton", "10036"))
  zip_code_xml <- rbind(zip_code_xml, c("/","Belle Harbor", "11694")) 
  zip_code_xml <- rbind(zip_code_xml, c("/","Ridgewood", "11385"))
  zip_code_xml <- rbind(zip_code_xml, c("/","Jamaica", "11435"))
