--- a/rest_neighbourhood.Rmd
+++ b/rest_neighbourhood.Rmd
@@ -12,7 +12,8 @@ rest_neighbourhood = left_join(rest_inspection, zip_code_xml, by = "zipcode")
 ##calculating percentage neighbourhood is na
 mean(is.na(rest_neighbourhood$neighborhood))
 ##taking out distinct zipcodes with missing neighbourhood name
-rest_neighbourhood %>% 
+zip_code_missing =
+  rest_neighbourhood %>% 
   select(zipcode, neighborhood) %>% 
   filter(is.na(neighborhood)) %>% 
   distinct()
