combining two datasets by boro and fitting linear regression

--- a/Download_reading_cleaning.Rmd
+++ b/Download_reading_cleaning.Rmd
@@ -72,7 +72,7 @@ health <- read_excel("health.xlsx", sheet = "CHP_all_data") %>%
 
 ## Percentage of fast food restaurant in different neighborhood (approached by cuisine type)
 
-```{r defining_fastfood}
+```{r defining_fastfood, include = FALSE}
 rest_inspection %>%
   mutate(dba = str_to_upper(dba)) %>%
   arrange(cuisine_description) %>%
@@ -135,8 +135,41 @@ percent_fastfood = function(name_boro){
   )
 }
 
-map(name_boro, percent_fastfood) %>%
+fastfood_boro=
+  map(name_boro, percent_fastfood) %>%
   bind_rows()
+```
+
+```{r}
+health_boro =
+  health %>%
+  clean_names() %>%
+  mutate(name = str_to_upper(name)) %>%
+  rename(boro = name)
+
+combined_boro = 
+  left_join(fastfood_boro, health_boro, by = "boro")
+```
+
+Obesity ~ Percent of fast food restaurants
+
+```{r}
+lm(obesity ~ percent_fastfood, combined_boro) %>%
+  broom::tidy()
+```
+
+Diabetes ~ Percent of fast food restaurants
+
+```{r}
+lm(diabetes ~ percent_fastfood, combined_boro) %>%
+  broom::tidy()
+```
+
+Hospitalized Stroke ~ Percent of fast food restaurants
+
+```{r}
+lm(stroke_hosp ~ percent_fastfood, combined_boro) %>%
+  broom::tidy()
 ```
 
 ## Healthy food restaurant in different neighborhood (Intuitively approached by cuisine type)
