--- a/Download_reading_cleaning.Rmd
+++ b/Download_reading_cleaning.Rmd
@@ -1,8 +1,11 @@
 ---
-title: "Reading_dataset"
-author: "Junting Ren"
+title: "Final project: The relationship between restaurant geographical distribution and chronic disease outcomes in New York City"
+author: "Gaeun Kim(gk2501); Junting Ren(jr3755);  Leyiyu Yue(ly2428); Ruiwei Zhang(rz2375) ; "
 date: "November 20, 2017"
-output: html_document
+output: 
+   html_document:
+    toc: true
+    toc_float: true
 ---
 
 ```{r setup, include=FALSE}
