Adding descriptions for the exploratory plot

--- a/Download_reading_cleaning.Rmd
+++ b/Download_reading_cleaning.Rmd
@@ -81,6 +81,8 @@ health_only_neighborhood <- health[-c(1:6),] %>%
   rename(neighborhood = name) %>% 
   mutate(neighborhood = as.factor(neighborhood))
 ##Plotting for outcome in different neighborhood
+
+###Williamsbridge and Baychester have the highest obesity rate, up to 32%
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, obesity)) %>% 
   filter(obesity > 25) %>% 
@@ -88,6 +90,7 @@ health_only_neighborhood %>%
   theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
   labs(title = "Neighborhood with 25 percent more obesity rate")
 
+###East New York and Starrett City have the highest diabetes rate, up to 17 percent
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, diabetes)) %>% 
   filter(diabetes > 10) %>% 
@@ -95,6 +98,7 @@ health_only_neighborhood %>%
   theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
   labs(title = "Neighborhood with 10 percent more diabetes rate")
 
+###BUshwick has the highest stroke hospitalization in 100,000 adults, up to 300 adults
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, stroke_hosp)) %>% 
   filter(stroke_hosp > 300) %>% 
@@ -102,7 +106,11 @@ health_only_neighborhood %>%
   theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
   labs(title = "Neighborhood with 300 more stroke hospitalization in 100,000 adults")
 
+
+
 ##Plotting for some adjusted variables
+
+###Morrisania and Crotona has the highest percent of poverty rate, up to 40%
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, poverty)) %>% 
   filter(poverty > 20) %>% 
@@ -110,6 +118,7 @@ health_only_neighborhood %>%
   theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
   labs(title = "Neighborhood with 20 percent or more poverty")
 
+###Fiancial district has the highest percent of young peoeple, up to 67%
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, age0to44_rate)) %>% 
   filter(age0to44_rate > 60) %>% 
