--- a/Download_reading_cleaning.Rmd
+++ b/Download_reading_cleaning.Rmd
@@ -526,22 +526,26 @@ list(graphs_health, graphs_chain_health, reg_chain)
 # model obesity
 lm_sum(health_chain_join$obesity)
 ```
+The chain_percentage-health_outcome graph shows the relationship between obesity and borough's percetage of chain restaurants. It shows a slightly positive linear trend except for Brooklyn, which has the lowest percentage of health restaurants but third highest in percentage of obesity rate.
+
+In the linear regression analysis,the p-value for the slope coeffcient, is 0.309, indicating that 0.05 significance level, there is no linear association between percentage of obesity in boroughs and their percentage of chain restaurants.
 
 ```{r model diabetes vs percentage of chains}
 # model diabetes
 lm_sum(health_chain_join$diabetes)
 ```
+Percentage of diabetes and chain restaurants seems to have a lower association when visualizing the relationship. In the linear regression analysis,the p-value for the slope coeffcient, is 0.546, indicating that 0.05 significance level, there is no linear association between percentage of diabetes in boroughs and their percentage of chain restaurants.
 
 ```{r model stroke vs percentage of chains}
 # model stroke
 lm_sum(health_chain_join$stroke_hosp)
 ```
+Percentage of diabetes and chain restaurants seems to have a lower association when visualizing the relationship. In the linear regression analysis,the p-value for the slope coeffcient, is 0.546, indicating that 0.05 significance level, there is no linear association between percentage of diabetes in boroughs and their percentage of chain restaurants. 
 
-<<<<<<< HEAD
+## Linear regression of health data on percentage of chain restaurants in each neighbourhood
 
 ##Analysis for restaurant data by neighborhood
-=======
->>>>>>> c02a76f5293435e6521bf915b9b78156a3922964
+
 ```{r merging the neighborhood data with restaurant data}
 zip_neighbor <- read_csv("neigh_zipcode.csv") %>% 
   mutate(zipcode = as.character(zipcode))
@@ -549,12 +553,3 @@ zip_neighbor <- read_csv("neigh_zipcode.csv") %>%
 rest_neighborhood = left_join(rest_inspection, zip_neighbor, by = "zipcode") %>% 
   filter(!is.na(neighborhood))
 ```
-
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-=======
->>>>>>> c36fea8a5b240de682da850dbe3bddbf55f77937
-=======
->>>>>>> f2af75f4116094ca411f1265f574e70f603d482f
